--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,11 +1,25 @@
 @font-face {
-    font-family: 'YandexText'; // Замените на имя вашего шрифта
-    src: url('https://yastatic.net/s3/home/fonts/ys/4/text-black.woff') format('woff'),
-         url('https://yastatic.net/s3/home/fonts/ys/4/text-medium.woff') format('woff'),
-         url('https://yastatic.net/s3/home/fonts/ys/4/text-regular.woff') format('woff');
-    font-weight: normal;
+    font-family: 'YandexText';
+    src: url('https://yastatic.net/s3/home/fonts/ys/4/text-regular.woff') format('woff');
+    font-weight: 400;
     font-style: normal;
 }
+@font-face {
+    font-family: 'YandexText';
+    src: url('https://yastatic.net/s3/home/fonts/ys/4/text-medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'YandexText';
+    src: url('https://yastatic.net/s3/home/fonts/ys/4/text-black.woff') format('woff');
+    font-weight: 900;
+    font-style: normal;
+}
+
+@import 'helpers';
+
+@import 'blocks/welcom-block';
 
 $main-font: #21201F;
 
@@ -16,4 +30,49 @@ $main-font: #21201F;
     text-decoration: none;
     font-family: YandexText, sans-serif;
     color: $main-font;
+    box-sizing: border-box;
+}
+
+body {
+    overflow-x: hidden;
+}
+
+.button {
+    background: #FFDE40;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    font-weight: 500;
+    line-height: 22px;
+
+    height: vw(49px, 375px);
+    border-radius: vw(25px, 375px);
+    box-shadow: 0px vw(4px, 375px) vw(64px, 375px) 0px rgba(255, 222, 64, 0.59);
+
+    font-size: vw(18px, 375px);
+    
+    @media screen and (min-width: 526px) {
+        height: vw(65px, 744px);
+        border-radius: vw(33px, 744px);
+        box-shadow: 0px vw(4px, 744px) vw(64px, 744px) 0px rgba(255, 222, 64, 0.59);
+        
+        font-size: vw(24px, 744px);
+    }
+    
+    @media screen and (min-width: 921px) {
+        height: vw(65px);
+        border-radius: vw(33px);
+        box-shadow: 0px vw(4px) vw(64px) 0px rgba(255, 222, 64, 0.59);
+        
+        font-size: vw(24px);
+    }
+    
+    @media screen and (min-width: 1441px) {
+        height: 65px;
+        border-radius: 33px;
+        box-shadow: 0px 4px 64px 0px rgba(255, 222, 64, 0.59);
+        
+        font-size: 24px;
+    }
 }
