--- a/assets/scss/blocks/_welcom-block.scss
+++ b/assets/scss/blocks/_welcom-block.scss
@@ -3,18 +3,19 @@
     background: linear-gradient(180deg, rgba(238, 229, 255, 0.00) 0%, #FFF 100%),
                 linear-gradient(0deg, rgba(255, 255, 255, 0.20) 0%, rgba(255, 255, 255, 0.20) 100%),
                 linear-gradient(90deg, rgba(255, 92, 77, 0.2) 0%, rgba(235, 70, 159, 0.2) 25%, rgba(131, 65, 239, 0.2) 72.00%, rgba(63, 104, 249, 0.2) 100%);
-    padding: vw(32px, 375px) vw(32px, 375px) vw(38px, 375px);
+    
+    margin-bottom: vw(280px, 375px);
 
     @media screen and (min-width: 526px) {
-        padding: vw(32px, 744px) vw(32px, 744px) vw(38px, 744px);
+        margin-bottom: vw(540px, 744px);
     }
     
     @media screen and (min-width: 921px) {
-        padding: vw(124px) calc(50% - #{vw(458px)});
+        margin-bottom: 0px;
     }
     
     @media screen and (min-width: 1441px) {
-        padding: 124px calc(50% - 458px);
+        
     }
 
     &_logo {
