--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -20,6 +20,7 @@
 @import 'helpers';
 
 @import 'blocks/welcom-block';
+@import 'blocks/advantages';
 
 $main-font: #21201F;
 
@@ -35,6 +36,22 @@ $main-font: #21201F;
 
 body {
     overflow-x: hidden;
+}
+
+.section {
+    padding: vw(32px, 375px) vw(32px, 375px) vw(38px, 375px);
+
+    @media screen and (min-width: 526px) {
+        padding: vw(32px, 744px) vw(32px, 744px) vw(38px, 744px);
+    }
+    
+    @media screen and (min-width: 921px) {
+        padding: vw(124px) calc(50% - #{vw(458px)});
+    }
+    
+    @media screen and (min-width: 1441px) {
+        padding: 124px calc(50% - 458px);
+    }
 }
 
 .button {
@@ -74,5 +91,21 @@ body {
         box-shadow: 0px 4px 64px 0px rgba(255, 222, 64, 0.59);
         
         font-size: 24px;
+    }
+}
+
+.hide {
+    display: none;
+    
+    &-mob {
+        @media screen and (max-width: 920px) {
+            display: none;
+        }
+    }
+
+    &-desk {
+        @media screen and (min-width: 921px) {
+            display: none;
+        }
     }
 }
