--- a/assets/scss/blocks/_welcom-block.scss
+++ b/assets/scss/blocks/_welcom-block.scss
@@ -5,17 +5,24 @@
                 linear-gradient(90deg, rgba(255, 92, 77, 0.2) 0%, rgba(235, 70, 159, 0.2) 25%, rgba(131, 65, 239, 0.2) 72.00%, rgba(63, 104, 249, 0.2) 100%);
     
     margin-bottom: vw(280px, 375px);
+    padding-top: vw(32px, 744px);
+    padding-bottom: vw(38px, 744px);
 
     @media screen and (min-width: 526px) {
         margin-bottom: vw(540px, 744px);
+        padding-top: vw(32px, 744px);
+        padding-bottom: vw(38px, 744px);
     }
     
     @media screen and (min-width: 921px) {
         margin-bottom: 0px;
+        padding-top: vw(124px);
+        padding-bottom: vw(124px);
     }
     
     @media screen and (min-width: 1441px) {
-        
+        padding-top: 124px;
+        padding-bottom: 124px;
     }
 
     &_logo {
