--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -19,9 +19,6 @@
 
 @import 'helpers';
 
-@import 'blocks/welcom-block';
-@import 'blocks/advantages';
-
 $main-font: #21201F;
 
 * {
@@ -39,18 +36,18 @@ body {
 }
 
 .section {
-    padding: vw(32px, 375px) vw(32px, 375px) vw(38px, 375px);
+    padding: 0px vw(32px, 375px);
 
     @media screen and (min-width: 526px) {
-        padding: vw(32px, 744px) vw(32px, 744px) vw(38px, 744px);
+        padding: 0px vw(32px, 744px);
     }
     
     @media screen and (min-width: 921px) {
-        padding: vw(124px) calc(50% - #{vw(458px)});
+        padding: 0px calc(50% - #{vw(458px)});
     }
     
     @media screen and (min-width: 1441px) {
-        padding: 124px calc(50% - 458px);
+        padding: 0px calc(50% - 458px);
     }
 }
 
@@ -109,3 +106,9 @@ body {
         }
     }
 }
+
+@import 'blocks/welcom-block';
+@import 'blocks/advantages';
+
+
+@import 'blocks/footer';
