--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -110,5 +110,5 @@ body {
 @import 'blocks/welcom-block';
 @import 'blocks/advantages';
 
-
+@import 'blocks/offer-blocks';
 @import 'blocks/footer';
