--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,6 +27,7 @@
 }
 
 body {
+  max-width: 100vw;
   overflow-x: hidden;
 }
 
@@ -624,6 +625,7 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
+  max-width: 100vw;
 }
 @media screen and (min-width: 526px) {
   .offer-block-info {
@@ -643,13 +645,49 @@ body {
 }
 .offer-block-info_content {
   position: relative;
+  display: flex;
+  flex-direction: column;
   z-index: 1;
+  gap: 8.5333333333vw;
+}
+@media screen and (min-width: 526px) {
+  .offer-block-info_content {
+    gap: 6.4516129032vw;
+  }
+}
+@media screen and (min-width: 921px) {
+  .offer-block-info_content {
+    gap: 3.3333333333vw;
+  }
+}
+@media screen and (min-width: 1441px) {
+  .offer-block-info_content {
+    gap: 48px;
+  }
+}
+.offer-block-info_content__action {
+  padding-top: 101.3333333333vw;
+}
+@media screen and (min-width: 526px) {
+  .offer-block-info_content__action {
+    padding-top: 86.0215053763vw;
+  }
+}
+@media screen and (min-width: 921px) {
+  .offer-block-info_content__action {
+    padding-top: 0px;
+    padding-left: calc(50% + 1.25vw);
+  }
+}
+@media screen and (min-width: 1441px) {
+  .offer-block-info_content__action {
+    padding-left: calc(50% + 18px);
+  }
 }
 .offer-block-info_content-title {
   font-weight: 900;
   line-height: 100%;
   max-height: 40.2666666667vw;
-  margin-bottom: 8.5333333333vw;
   letter-spacing: -0.1706666667vw;
   font-size: 8.5333333333vw;
 }
@@ -657,7 +695,6 @@ body {
   .offer-block-info_content-title {
     width: 54.7043010753vw;
     max-height: 30.376344086vw;
-    margin-bottom: 6.4516129032vw;
     letter-spacing: -0.1290322581vw;
     font-size: 6.4516129032vw;
   }
@@ -666,7 +703,6 @@ body {
   .offer-block-info_content-title {
     width: 28.2638888889vw;
     max-height: 15.6944444444vw;
-    margin-bottom: 3.3333333333vw;
     letter-spacing: -0.0666666667vw;
     font-size: 3.3333333333vw;
   }
@@ -675,7 +711,6 @@ body {
   .offer-block-info_content-title {
     width: 407px;
     max-height: 226px;
-    margin-bottom: 48px;
     letter-spacing: -0.96px;
     font-size: 48px;
   }
@@ -734,6 +769,116 @@ body {
   .offer-block-info_img img {
     width: 914px;
     height: 893px;
+  }
+}
+.offer-block-info_img__action {
+  display: block;
+  position: absolute;
+  left: 0px;
+  top: 10.1333333333vw;
+}
+@media screen and (min-width: 526px) {
+  .offer-block-info_img__action {
+    top: -16.1290322581vw;
+  }
+}
+@media screen and (min-width: 921px) {
+  .offer-block-info_img__action {
+    top: -9.5138888889vw;
+  }
+}
+@media screen and (min-width: 1441px) {
+  .offer-block-info_img__action {
+    top: -137px;
+  }
+}
+.offer-block-info_img__action img {
+  width: 100vw;
+  height: 109.8666666667vw;
+}
+@media screen and (min-width: 526px) {
+  .offer-block-info_img__action img {
+    width: 100vw;
+    height: 109.811827957vw;
+  }
+}
+@media screen and (min-width: 921px) {
+  .offer-block-info_img__action img {
+    width: 54.7222222222vw;
+    height: 51.3194444444vw;
+  }
+}
+@media screen and (min-width: 1441px) {
+  .offer-block-info_img__action img {
+    width: 788px;
+    height: 739px;
+  }
+}
+.offer-block-info_img-text {
+  position: absolute;
+  overflow: hidden;
+  top: 3.2vw;
+  left: 2.1333333333vw;
+}
+@media screen and (min-width: 526px) {
+  .offer-block-info_img-text {
+    top: -13.4408602151vw;
+    left: 2.0161290323vw;
+  }
+}
+@media screen and (min-width: 921px) {
+  .offer-block-info_img-text {
+    top: -4.5138888889vw;
+    left: 9.7222222222vw;
+  }
+}
+@media screen and (min-width: 1441px) {
+  .offer-block-info_img-text {
+    top: -65px;
+    left: 140px;
+  }
+}
+.offer-block-info_img-text img {
+  animation: rotate 10s linear 0s infinite;
+  width: 96vw;
+  height: 96vw;
+}
+@media screen and (min-width: 526px) {
+  .offer-block-info_img-text img {
+    width: 96.2365591398vw;
+    height: 96.2365591398vw;
+  }
+}
+@media screen and (min-width: 921px) {
+  .offer-block-info_img-text img {
+    width: 37.4305555556vw;
+    height: 37.4305555556vw;
+  }
+}
+@media screen and (min-width: 1441px) {
+  .offer-block-info_img-text img {
+    width: 539px;
+    height: 539px;
+  }
+}
+.offer-block-info_content-action {
+  width: 100%;
+  margin-bottom: 19.2vw;
+}
+@media screen and (min-width: 526px) {
+  .offer-block-info_content-action {
+    margin-bottom: 9.6774193548vw;
+  }
+}
+@media screen and (min-width: 921px) {
+  .offer-block-info_content-action {
+    margin-bottom: 0px;
+    width: 19.5138888889vw;
+  }
+}
+@media screen and (min-width: 1441px) {
+  .offer-block-info_content-action {
+    width: 281px;
   }
 }
 
