--- a/assets/scss/blocks/_offer-blocks.scss
+++ b/assets/scss/blocks/_offer-blocks.scss
@@ -2,8 +2,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-
-    // margin-bottom: vw(128px, 375px);
+    max-width: 100vw;
     
     @media screen and (min-width: 526px) {
         margin-bottom: vw(128px, 744px);
@@ -20,19 +19,43 @@
     
     &_content {
         position: relative;
+        display: flex;
+        flex-direction: column;
         z-index: 1;
 
+        gap: vw(32px, 375px);
 
         @media screen and (min-width: 526px) {
+            gap: vw(48px, 744px);
 
         }
         
         @media screen and (min-width: 921px) {
+            gap: vw(48px);
 
         }
         
         @media screen and (min-width: 1441px) {
+            gap: 48px;
 
+        }
+
+        &__action {
+            padding-top: vw(380px, 375px);
+            
+            @media screen and (min-width: 526px) {
+                padding-top: vw(640px, 744px);
+            }
+            
+            @media screen and (min-width: 921px) {
+                padding-top: 0px;
+                padding-left: calc(50% + #{vw(18px)});
+            }
+            
+            @media screen and (min-width: 1441px) {
+                
+                padding-left: calc(50% + 18px);
+            }
         }
     }
     
@@ -41,7 +64,6 @@
         line-height: 100%;
 
         max-height: vw(151px, 375px);
-        margin-bottom: vw(32px, 375px);
         
         letter-spacing: vw(-0.64px, 375px);
         font-size: vw(32px, 375px);
@@ -49,7 +71,6 @@
         @media screen and (min-width: 526px) {
             width: vw(407px, 744px);
             max-height: vw(226px, 744px);
-            margin-bottom: vw(48px, 744px);
             
             letter-spacing: vw(-0.96px, 744px);
             font-size: vw(48px, 744px);
@@ -58,7 +79,6 @@
         @media screen and (min-width: 921px) {
             width: vw(407px);
             max-height: vw(226px);
-            margin-bottom: vw(48px);
             
             letter-spacing: vw(-0.96px);
             font-size: vw(48px);
@@ -67,7 +87,6 @@
         @media screen and (min-width: 1441px) {
             width: 407px;
             max-height: 226px;
-            margin-bottom: 48px;
             
             letter-spacing: -0.96px;
             font-size: 48px;
@@ -130,6 +149,111 @@
                 width: 914px;
                 height: 893px;
             }
+        }
+
+        &__action {
+            display: block;
+            position: absolute;
+            left: 0px;
+
+            top: vw(38px, 375px);
+            
+            @media screen and (min-width: 526px) {
+                top: vw(-120px, 744px);
+            }
+            
+            @media screen and (min-width: 921px) {
+                top: vw(-137px);
+            }
+            
+            @media screen and (min-width: 1441px) {
+                top: -137px;
+            }
+
+            img {
+
+                width: vw(375px, 375px);
+                height: vw(412px, 375px);
+    
+                @media screen and (min-width: 526px) {
+                    width: vw(744px, 744px);
+                    height: vw(817px, 744px);
+                }
+                
+                @media screen and (min-width: 921px) {
+                    width: vw(788px);
+                    height: vw(739px);
+                }
+                
+                @media screen and (min-width: 1441px) {
+                    width: 788px;
+                    height: 739px;
+                }
+            }
+        }
+    }
+
+    &_img-text {
+        position: absolute;
+        overflow: hidden;
+        
+        top: vw(12px, 375px);
+        left: vw(8px, 375px);
+
+        @media screen and (min-width: 526px) {
+            top: vw(-100px, 744px);
+            left: vw(15px, 744px);
+        }
+        
+        @media screen and (min-width: 921px) {
+            top: vw(-65px);
+            left: vw(140px);
+        }
+        
+        @media screen and (min-width: 1441px) {
+            top: -65px;
+            left: 140px;
+        }
+
+        img {
+            animation: rotate 10s linear 0s infinite;
+
+            width: vw(360px, 375px);
+            height: vw(360px, 375px);
+
+            @media screen and (min-width: 526px) {
+                width: vw(716px, 744px);
+                height: vw(716px, 744px);
+            }
+            
+            @media screen and (min-width: 921px) {
+                width: vw(539px);
+                height: vw(539px);
+            }
+            
+            @media screen and (min-width: 1441px) {
+                width: 539px;
+                height: 539px;
+            }
+        }
+    }
+
+    &_content-action {
+        width: 100%;
+        
+        margin-bottom: vw(72px, 375px);
+
+        @media screen and (min-width: 526px) {
+            margin-bottom: vw(72px, 744px);
+        }
+        
+        @media screen and (min-width: 921px) {
+            margin-bottom: 0px;
+            width: vw(281px);
+        }
+        
+        @media screen and (min-width: 1441px) {
+            width: 281px;
         }
     }
 }
