--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -109,7 +109,7 @@ body {
 }
 
 @import 'blocks/welcom-block';
-@import 'blocks/advantages';
-
+@import 'blocks/advantages-block';
+@import 'blocks/gallery-block';
 @import 'blocks/offer-blocks';
 @import 'blocks/footer';
