Пофиксил отступ у самоката в блоке с офером

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -990,13 +990,13 @@ body {
 @media screen and (min-width: 921px) {
   .offer-block-info_img__action {
     top: -9.5138888889vw;
-    left: 3.4722222222vw;
+    left: calc(50% - 48.8888888889vw);
   }
 }
 @media screen and (min-width: 1441px) {
   .offer-block-info_img__action {
     top: -137px;
-    left: 50px;
+    left: calc(50% - 704px);
   }
 }
 .offer-block-info_img__action img {
@@ -1036,13 +1036,13 @@ body {
 @media screen and (min-width: 921px) {
   .offer-block-info_img-text {
     top: -4.5138888889vw;
-    left: 12.5vw;
+    left: calc(50% - 38.8888888889vw);
   }
 }
 @media screen and (min-width: 1441px) {
   .offer-block-info_img-text {
     top: -65px;
-    left: 180px;
+    left: calc(50% - 560px);
   }
 }
 .offer-block-info_img-text img {
